--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
     <application
         android:name=".app.MyApp"
@@ -26,7 +27,7 @@
             android:name=".view.CircleProgressActivity"
             android:screenOrientation="portrait"/>
         <activity android:name=".view.DownloadActivity"/>
-
+        <activity android:name=".view.PermissionActivity"/>
 
         <service
             android:name=".dowload.DownLoadService"
